--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_cursos
 spring.datasource.username=postgres
-spring.datasource.password=1995
+spring.datasource.password=12345
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#spring.jpa.hibernate.ddl-auto=update
